--- a/services/django/requirements.txt
+++ b/services/django/requirements.txt
@@ -4,10 +4,15 @@ django-cors-headers==3.10.0
 djangorestframework==3.12.4
 gunicorn==20.1.0
 Pillow==8.4.0
-psycopg2==2.9.1
+psycopg2-binary
+#psycopg2==2.9.1
 pytz==2021.3
 six==1.16.0
 sqlparse==0.4.2
 typing-extensions==3.10.0.2
 Unipath==1.1
 whitenoise==5.3.0
+requests
+django-dotenv
+#django-storages
+#boto3
